WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106888
Fullscreen element should not share styles with its siblings
https://bugs.webkit.org/show_bug.cgi?id=106888
Summary
Fullscreen element should not share styles with its siblings
Charles Wei
Reported
2013-01-15 04:02:49 PST
We try to share RenderStyle for elements with it's siblings if they have the same style. But We should not share styles if the element is in fullscreen mode.
Attachments
Patch
(3.59 KB, patch)
2013-01-15 04:05 PST
,
Charles Wei
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Charles Wei
Comment 1
2013-01-15 04:05:28 PST
Created
attachment 182734
[details]
Patch
George Staikos
Comment 2
2013-01-15 18:56:38 PST
Comment on
attachment 182734
[details]
Patch Verified correct. Review interface seems to truncate the testcase but saw the patch and it looks fine.
WebKit Review Bot
Comment 3
2013-01-15 19:04:23 PST
Comment on
attachment 182734
[details]
Patch Clearing flags on attachment: 182734 Committed
r139824
: <
http://trac.webkit.org/changeset/139824
>
WebKit Review Bot
Comment 4
2013-01-15 19:04:27 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5
2013-01-15 20:12:43 PST
Comment on
attachment 182734
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=182734&action=review
> Source/WebCore/ChangeLog:6 > +
https://bugs.webkit.org/show_bug.cgi?id=106888
> + > + Reviewed by NOBODY (OOPS!).
This is missing an explanation of the bug and what you did to fix it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug