Fullscreen element should not share styles with it's siblings. https://bugs.webkit.org/show_bug.cgi?id=106888

Reviewed by George Staikos.

Source/WebCore:

Test: fullscreen/full-screen-no-style-sharing.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::canShareStyleWithElement):

LayoutTests:

* fullscreen/full-screen-no-style-sharing-expected.txt: Added.
* fullscreen/full-screen-no-style-sharing.html: Added.


Canonical link: https://commits.webkit.org/125206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139824 268f45cc-cd09-0410-ab3c-d52691b4dbfc